# ESP32_Sensors_Code

./: .gitignore  .gitmodules  README.md
ESP32_Code/: CMakeLists.txt
ESP32_Code/components/GNSS_Lib/: CMakeLists.txt
ESP32_Code/components/ISM330DHCX/: CMakeLists.txt
ESP32_Code/components/MMC5983MA/: CMakeLists.txt
ESP32_Code/main/: CMakeLists.txt  main.cpp
ESP32_Code/main/include/: sensors.hpp
